Working Version 11/2/2025