@@ -5,20 +5,23 @@ import org.openqa.selenium.Keys;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Scanner;
+import java.io.*;
+import java.util.*;
 
 public class DesktopSearches {
 
     public static WebDriver driver = EdgeAutomate.driver;
 
-    public static void runner() throws FileNotFoundException, InterruptedException {
+    public void runner() throws FileNotFoundException, InterruptedException {
         driver.get("https://www.bing.com/");
-        Scanner scan = new Scanner(new File("com/automate/words.txt"));
+        ClassLoader loader = getClass().getClassLoader();
+        // Create input stream for resource file
+        InputStream input = loader.getResourceAsStream("words.txt");
+        if (input == null) {
+            throw new IllegalArgumentException("File not found!");
+        }
+        // Scan input from input stream
+        Scanner scan = new Scanner(new BufferedReader(new InputStreamReader(input)));
         ArrayList<String> wordList = new ArrayList<>();
 
         while (scan.hasNextLine()) {
@@ -30,11 +33,12 @@ public class DesktopSearches {
         List<String> subList = wordList.subList(0, 30);
 
         WebElement mainSearchBar = EdgeAutomate.waitForCompletion("//*[@id=\"sb_form_q\"]");
-        mainSearchBar.sendKeys(subList.get(0));
+        mainSearchBar.sendKeys(subList.getFirst());
         mainSearchBar.sendKeys(Keys.ENTER);
         for (int i = 1; i < subList.size(); i++) {
             try {
-                Thread.sleep(10000);
+                Random r = new Random();
+                Thread.sleep(5000 + r.nextInt(5000));
                 mainSearchBar = EdgeAutomate.waitForCompletion("//*[@id=\"sb_form_q\"]");
                 mainSearchBar.clear();
                 mainSearchBar.sendKeys(subList.get(i));
@@ -43,7 +47,6 @@ public class DesktopSearches {
             catch (InterruptedException e) {
                 e.printStackTrace();
             }
-
         }
     }
 }
